# swanlake

./: .codecov.yml  .dockerignore  .gitignore  AGENT.md  AGENTS.md  BENCHMARK.md  CONFIGURATION.md  CONTRIBUTION.md  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  codecov.yml  config.toml  docker-compose.yml  test-integration.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  performance.yml  release.yml
docs/: session.md
examples/: distributed-lock.rs
examples/distributed-lock/: README.md
examples/go-adbc/: go.mod  go.sum  main.go
examples/go-sqlx/: go.mod  main.go
examples/python-adbc/: README.md  main.py  pyproject.toml
examples/python-marimo/: README.md  pyproject.toml  swanlake.py
examples/rust-adbc/: Cargo.toml
examples/rust-adbc/src/: main.rs
examples/rust-client/: Cargo.toml  README.md
examples/rust-client/src/: lib.rs  main.rs
flight-sql-client/: Cargo.toml  README.md
flight-sql-client/src/: arrow.rs  client.rs  connection.rs  lib.rs
go-client/: Makefile  README.md  go.mod  main.go  test.sh
scripts/: analyze-benchbase-results.py  check_arrow_duckdb_alignment.py  docker-entrypoint.sh  duckdb-lib-env.sh  extract_docker_cache.sh  inject_docker_cache.sh  run-all-sql-tests.sh  run-benchbase-ycsb.sh  run-benchbase.sh  run-integration-tests.sh  run_ducklake_tests.sh
src/: config.rs  duckdb.rs  error.rs  main.rs  service.rs  sql_parser.rs
src/dq/: README.md  config.rs  coordinator.rs  lock.rs  manager.rs  mod.rs  runtime.rs  schema.rs  session.rs  settings.rs  storage.rs
src/engine/: batch.rs  connection.rs  factory.rs
src/lock/: IMPLEMENTATION_NOTES.md  README.md  mod.rs  postgres.rs
src/service/: convert.rs  execute.rs  mod.rs
src/service/handlers/: prepared.rs  sql_info.rs  statement.rs  ticket.rs  transaction.rs
src/session/: README.md  id.rs  mod.rs  registry.rs  session.rs
swanlake-client/: Cargo.toml  DESIGN_CONNECTION_POOL.md  README.md
swanlake-client/src/: arrow.rs  async_pool.rs  client.rs  driver.rs  internal.rs  lib.rs  pool.rs  pool_shared.rs
swanlake-client/tests/: integration_async_pool.rs  integration_client_pool.rs  perf_async_pool.rs
swanlake-core/: Cargo.toml  README.md  build.rs
swanlake-core/src/: config.rs  error.rs  lib.rs  metrics.rs  sql_parser.rs  types.rs  ui.rs  util.rs
swanlake-core/src/dq/: README.md  config.rs  coordinator.rs  duckdb_buffer.rs  mod.rs  runtime.rs
swanlake-core/src/engine/: batch.rs  connection.rs  factory.rs  mod.rs
swanlake-core/src/lock/: README.md  mod.rs  postgres.rs
swanlake-core/src/maintenance/: lock.rs  mod.rs  postgres.rs
swanlake-core/src/service/: convert.rs  execute.rs  mod.rs
swanlake-core/src/service/handlers/: README.md  metadata.rs  mod.rs  prepared.rs  sql_info.rs  statement.rs
swanlake-core/src/session/: README.md  id.rs  mod.rs  registry.rs
swanlake-core/src/sql/: mod.rs  parser.rs  rewrite.rs
swanlake-server/: Cargo.toml  Dockerfile  README.md  build.rs
swanlake-server/src/: main.rs  status.html  status.rs
tests/benchbase/: log4j-debug.properties  logging-debug.properties  tpch-ddl-ducklake.sql  tpch-flight-sql.xml  ycsb-ddl-ducklake.sql  ycsb-flight-sql.xml
tests/runner/: Cargo.toml  README.md  main.rs
tests/runner/src/: main.rs  scenarios.rs
tests/runner/src/scenarios/: appender_insert.rs  client_ext.rs  concurrent_sessions.rs  duckling_queue_auto_load.rs  duckling_queue_dlq.rs  duckling_queue_persistence.rs  duckling_queue_recovery.rs  duckling_queue_rotation.rs  duckling_queue_utils.rs  execute_query_commands.rs  metadata_discovery.rs  mod.rs  parameter_types.rs  prepared_statements.rs  transaction_recovery.rs
tests/sql/: README.md  ducklake_basic.test  duckling_queue_basic.test  duckling_queue_force_flush.test  duckling_queue_schema_compat.test  duckling_queue_schema_mismatch.test  duckling_queue_schema_refresh.test  error_status.test  metadata_visibility.test  partial_insert.test  quoted_identifiers.test  show_describe_commands.test  sql_injection_identifiers.test  table_schema_test.test  timestamp.test
