[workspace]
members = [
    "swanlake-core",
    "swanlake-server",
    "swanlake-client",
    "examples/rust-adbc",
    "tests/runner",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
arrow = "57"
arrow-array = "57"
arrow-buffer = "57"
arrow-schema = "57"
arrow-flight = { version = "57", features = ["flight-sql"] }
arrow-ipc = "57"
arrow-cast = "57"
arrow-select = "57"
duckdb = { git = "https://github.com/duckdb/duckdb-rs", rev = "a2639608d946690e04b1d5f6448302d57bb99d7e", default-features = false, features = ["appender-arrow"] }
tonic = { version = "0.14.4", features = ["transport"] }
thiserror = "2.0.18"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
disallowed-types = "deny"
expect_used = "allow"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
if_not_else = "deny"
ignored_unit_patterns = "deny"
inconsistent_struct_constructor = "deny"
manual_assert = "deny"
manual_string_new = "deny"
match_bool = "deny"
match_wildcard_for_single_variants = "deny"
missing_panics_doc = "allow"
needless_raw_string_hashes = "deny"
or_fun_call = "deny"
panic = "allow"
print_stderr = "allow"
print_stdout = "allow"
semicolon-if-nothing-returned = "deny"
todo = "deny"
trivially_copy_pass_by_ref = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unnecessary_wraps = "allow"
unreachable = "deny"
unused_self = "deny"
unwrap_used = "allow"
large_futures = "deny"
cloned_instead_of_copied = "deny"
inefficient_to_string = "deny"
assigning_clones = "deny"
stable_sort_primitive = "deny"
ref_option = "deny"
unnecessary_literal_bound = "deny"
unused_async = "allow"

# Temporary compatibility allowances for the current codebase.
# Tighten these to "deny" incrementally:
# expect_used, missing_panics_doc, panic, print_stderr, print_stdout,
# unnecessary_wraps, unwrap_used, unused_async.

# The following pedantic lints are explicitly set to "allow" to give authors discretion on their use.
default_trait_access = "allow"
match_same_arms = "allow"
must_use_candidate = "allow"
single_match_else = "allow"

# This lint cannot be fixed by rustfmt and we don't currently generate docs.
doc_lazy_continuation = "allow"
