[package]
name = "swanlake-client"
version = "0.1.1"
edition = "2021"
description = "A Rust client library for Arrow Flight SQL servers"
license = "MIT"
repository = "https://github.com/swanlake-io/swanlake"
keywords = ["flight-sql", "arrow", "adbc", "database", "client"]
categories = ["database", "api-bindings"]

[dependencies]
adbc_core = "0.20"
adbc_driver_manager = "0.20"
adbc-driver-flightsql = "0.1"
anyhow = "1.0"
arrow-array = "56"
arrow-schema = "56"
chrono = "0.4"

# cli
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
dirs = "5.0"
rustyline = "14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
