[package]
name = "swanlake-client"
version = "0.1.1"
edition = "2021"
description = "A Rust client library for Arrow Flight SQL servers"
license = "MIT"
repository = "https://github.com/swanlake-io/swanlake"
keywords = ["flight-sql", "arrow", "adbc", "database", "client"]
categories = ["database", "api-bindings"]

[dependencies]
adbc_core = "0.21"
adbc_driver_manager = "0.21"
adbc-driver-flightsql = "0.1"
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow = { version = "57", features = ["prettyprint"] }

# cli
clap = { version = "4.5", features = ["derive"], optional = true }
comfy-table = { version = "7.2", optional = true }
dirs = { version = "6.0", optional = true }
rustyline = { version = "17.0", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"], optional = true }

[features]
default = []
cli = ["clap", "comfy-table", "dirs", "rustyline", "tracing-subscriber"]

[[bin]]
name = "swanlake-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]
