[package]
name = "swanlake-core"
version = "0.1.0"
edition = "2021"
links = "swanlake_duckdb"

[features]
default = []
distributed-locks = [
    "dep:native-tls",
    "dep:postgres-native-tls",
    "dep:tokio-postgres",
    "dep:siphasher",
]

[dependencies]
anyhow = "1.0"
arrow-array = "57"
arrow-flight = { version = "57", features = ["flight-sql"] }
arrow-ipc = { version = "57" }
arrow-schema = "57"
arrow-cast = "57"
arrow-select = "57"
duckdb = { git = "https://github.com/swanlake-io/duckdb-rs", rev = "017cf3c", default-features = false, features = ["appender-arrow"] }
sqlparser = { version = "0.59.0", features = ["visitor"] }
futures = "0.3.31"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
tonic = { version = "0.14.2", features = ["transport"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
tracing = "0.1.41"
config = "0.15.19"
siphasher = { version = "1.0", optional = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "6"

[dev-dependencies]
tempfile = "3"
