[package]
name = "swanlake-core"
version = "0.1.0"
edition = "2021"
links = "swanlake_duckdb"

[features]
default = []
distributed-locks = [
    "dep:native-tls",
    "dep:postgres-native-tls",
    "dep:tokio-postgres",
    "dep:siphasher",
]

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { version = "57" }
arrow-schema = { workspace = true }
arrow-cast = "57"
arrow-select = "57"
duckdb = { git = "https://github.com/swanlake-io/duckdb-rs", rev = "017cf3c", default-features = false, features = ["appender-arrow"] }
sqlparser = { version = "0.59.0", features = ["visitor"] }
futures = "0.3.31"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
tonic = { workspace = true }
serde_json = "1.0.145"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { version = "0.7", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
tracing = { workspace = true }
config = "0.15.19"
siphasher = { version = "1.0", optional = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "6"

[dev-dependencies]
tempfile = "3"
