[package]
name = "swanlake-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "swanlake"
path = "src/main.rs"

[dependencies]
swanlake-core = { path = "../swanlake-core" }
anyhow = "1.0"
dotenvy = "0.15.7"
tonic = { version = "0.14.2", features = ["transport"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
config = "0.15.19"
tonic-health = "0.14.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
arrow-flight = { version = "57", features = ["flight-sql"] }
