[package]
name = "swanlake-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "swanlake"
path = "src/main.rs"

[dependencies]
swanlake-core = { path = "../swanlake-core" }
anyhow = { workspace = true }
dotenvy = "0.15.7"
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic-health = "0.14.2"
tokio = { workspace = true }
arrow-flight = { workspace = true }
