[package]
name = "rust-adbc"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
anyhow = { workspace = true }
swanlake-client = { path = "../../swanlake-client" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
