[package]
name = "swanlake-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "swanlake-cli"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0"
arrow-array = "56"
arrow-schema = "56"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
dirs = "5.0"
flight-sql-client = { path = "../../flight-sql-client" }
rustyline = "14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
