[package]
name = "swanlake-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "runner"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = "57"
arrow-schema = { workspace = true }
arrow = { version = "57", features = ["prettyprint"] }
chrono = "0.4"
swanlake-client = { path = "../../swanlake-client" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = "0.4"
